@@ -1,6 +1,7 @@
 package com.focalizze.Focalizze.configurations;
 
 import com.focalizze.Focalizze.utils.JwtRequestFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -8,6 +9,7 @@ import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
@@ -18,35 +20,38 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final JwtRequestFilter jwtRequestFilter;
     private final AuthenticationProvider authenticationProvider;
 
-    public SecurityConfig(JwtRequestFilter jwtRequestFilter, AuthenticationProvider authenticationProvider) {
-        this.jwtRequestFilter = jwtRequestFilter;
-        this.authenticationProvider = authenticationProvider;
-    }
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // 1. Configuración de CORS (Permitir peticiones del Front)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
+
+                // 2. Deshabilitar CSRF (Sintaxis moderna para APIs Stateless)
+                .csrf(AbstractHttpConfigurer::disable)
+
+                // 3. Gestión de Sesión (Sin cookies, Stateless)
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                // 4. Reglas de Autorización (El orden importa: de más específico a más general)
                 .authorizeHttpRequests(auth -> auth
+                        // A. RUTAS PÚBLICAS (Sin Token)
+                        // Autenticación, Registro y 2FA
+                        .requestMatchers("/api/auth/**").permitAll()
 
-                        // --- BLOQUE 1: RUTAS PÚBLICAS (ACCESO SIN LOGIN) ---
-                        // Se permite el acceso a todos los endpoints de autenticación y registro.
-                        .requestMatchers(
-                                "/api/auth/**",
-                                "/images/**",
-                                "/api/profiles/avatars/**" ).permitAll()
+                        // Imágenes y recursos estáticos
+                        .requestMatchers("/images/**", "/api/profiles/avatars/**").permitAll()
 
-                        // Se permite la LECTURA (GET) de contenido público.
-                        // Esto incluye ver perfiles, avatares, hilos individuales, categorías, y resultados de búsqueda.
+                        // B. LECTURA PÚBLICA (GET)
                         .requestMatchers(HttpMethod.GET,
                                 "/api/profiles/**",
                                 "/api/thread/**",
@@ -55,39 +60,33 @@ public class SecurityConfig {
                                 "/api/threads/*/comments"
                         ).permitAll()
 
-                        // --- BLOQUE 2: RUTAS CON AUTENTICACIÓN ---
-                        // Si una petición no coincide con ninguna de las reglas anteriores,
-                        // esta regla final se aplica, exigiendo que el usuario esté autenticado.
-                        // Esto protege automáticamente:
-                        //   - GET /api/feed (tu feed personalizado)
-                        //   - GET /api/saved-threads
-                        //   - GET /api/users/me/interactions
-                        //   - POST, PATCH, DELETE a /api/thread/**
-                        //   - POST a /api/users/{username}/follow
-                        //   - Y cualquier otro endpoint que crees en el futuro.
-                        .requestMatchers("/api/comments/**").authenticated()
-                        .requestMatchers("/api/notifications/**").authenticated()
+                        // C. TODO LO DEMÁS REQUIERE LOGIN
                         .anyRequest().authenticated()
                 )
 
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                .authenticationProvider(authenticationProvider);
+                // 5. Proveedor de autenticación
+                .authenticationProvider(authenticationProvider)
 
-        http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
+                // 6. Añadir el filtro JWT antes del filtro de usuario/password estándar
+                .addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-
-    // Bean para configurar CORS. Reemplaza tu clase WebConfig.
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:4200", "http://localhost:8080"));
+
+        // Orígenes permitidos (Angular, React, Postman/Local)
+        configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000", "http://localhost:8080"));
+
+        // Métodos HTTP permitidos
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        // Cabeceras permitidas (Authorization es vital para el JWT)
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+
+        // Permitir credenciales (cookies/headers auth)
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
